# PerceCiel

./: .gitignore  AUTHORS  CMakeLists.txt  Makefile  README.md  win.mk
Level Design/: Fichier Monde Basique.tmx  Thumbs.db  basic2.tmx  blocstab.ods
games/: CMakeLists.txt  main.cc
inc/: Game.h  block.h~  dirtblock.h  dirtblock.h~
inc/character/: Player.h
inc/events/: AbstractKeyboardEventHandler.h  AbstractMouseEventHandler.h
inc/graphic/: AbstractDrawable.h  AbstractWindow.h  AnimatedSprite.h  Animation.h  TextureBlockManager.h  TextureLoader.h
inc/map/: Block.h  Chunk.h  ChunkLoader.h  ChunkWorld.h  DirtBlock.h  Map.h  chunkLoader.h
inc/tools/: MapVisitor.h  Updatable.h
include/character/: Character.h  Inventory.h  Mob.h  NonPlayer.h  Player.h
res/: Thumbs.db  rundim.txt
shared/PerceCiel/graphics/Characters/Player/Maya/Run12ips/: Thumbs.db
shared/PerceCiel/graphics/Characters/Player/Maya/Run24ips/: Thumbs.db
shared/PerceCiel/graphics/tileSet/: Thumbs.db
shared/PerceCiel/maps/: MapBasic.tmx  README.md  test.tmx  testMap.tmx
src/: Game.cpp  TestCMake.cpp  block.cpp  block.cpp~  dirtblock.cpp  main.cpp  main.cpp~
src/character/: Character.cpp  Inventory.cpp  Mob.cpp  NonPlayer.cpp  Player.cpp
src/events/: AbstractKeyboardEventHandler.cpp  AbstractMouseEventHandler.h
src/graphic/: AbstractDrawable.cpp  AbstractWindow.cpp  AnimatedSprite.cpp  Animation.cpp  TextureBlockManager.cpp  TextureLoader.cpp
src/map/: Block.cpp  Chunk.cpp  ChunkLoader.cpp  ChunkWorld.cpp  DirtBlock.cpp  Map.cpp  chunkLoader.cpp
src/tools/: MapVisitor.cpp
